* Rewrite String#escapeHTML and String#unescapeHTML to ensure more consistent output across browsers. Closes #8452. [jddalton, slusarz, Tobie Langel)

* Make sure Event#stopObserving works when passed non-string value as an eventName. [kangax]

* Cleaned up event.js renaming confusing/contradictory variable names [jddalton]

* Fix Event.stopObserving() IE error on elements with no observers. [jddalton]

* Prevent getEventID from assigning `window` and `document` an eventID. [jddalton]

* Fix error when calling Event.stopObserving(window). [#30 state:resolved] [jddalton, kangax]

* Fix bug in getEventID where an array is returned instead of a number. [#228 state:resolved] [jddalton]

* Improve NodeList detection for Safari's $A function. [#187 state:resolved] [Garrett Smith, jddalton]

* Use different tactic to sniff for Opera in order to avoid false positives in IE. [#172 state:resolved] [Tobie Langel, jddalton]

* Ensure Selector.handlers.id finds the proper element even when it's not attached to the document. [#198, #271 state:resolved] [jddalton]

* Ensure Element#getDimensions only unhides elements that are hidden. [Andrew Dupont, Nick Stackenburg, jddalton]

* Make Element#getDimensions use offset(Height|Width) rather than client(Height|Width). Closes #10122. [demian85, jddalton, Nick Stackenburg]

* Fix for IE7 to access local files via Ajax.Request. Closes #8259. [Andrew Dupont, hagen.seifert, jddalton]

* Make Object.isNumber check that the number is finite (rather than NaN or +/-Infinity). Closes #10349. [mkim]

* Ensure Object.isHash handles "falsy" values properly. [jddalton]

* Ensure Object.isElement handles "falsy" values properly. [kangax]

* Ensure Hash does not return keys from the prototype chain (e.g., constructor, valueOf, toString). [kangax]
