@@ -1061,7 +1061,10 @@ Element.extend = (function() {
   
   var extend = Object.extend(function(element) {
     if (!element || element._extendedByPrototype || 
-        element.nodeType != 1 || element == window) return element;
+        element.nodeType != 1 || element === window) return element;
+
+    // Filter out XML nodes because IE errors on them.
+    if (!('write' in element.ownerDocument)) return element;
 
     var methods = Object.clone(Methods),
       tagName = element.tagName.toUpperCase(), property, value;
